RESOLVED FIXED141066
Web Inspector: console.table with columnName filter for non-existent property should still show column
https://bugs.webkit.org/show_bug.cgi?id=141066
Summary Web Inspector: console.table with columnName filter for non-existent property...
Joseph Pecoraro
Reported 2015-01-29 18:56:41 PST
* SUMMARY console.table with columnName filter for non-existent property should still show column. * TEST var p1 = { first: "Joe", last: "Peck", age: 10 }; var p2 = { first: "First", last: "Last", age: 20 }; console.table([p1, p2], ["first", "age", "middle"]); * EXPECTED OUTPUT Table with "(Index)", "first", "age", and "middle" columns. * ACTUAL OUTPUT Table with "(Index)", "first", and "age" columns. Since no object had a "middle" property. * NOTES - We should probably use the columnNames list as the proposed order of columns. - We can improve the backend by not getting all property descriptors, and filtering on columnNames earlier / proactively
Attachments
[IMAGE] Proposed Changes (68.14 KB, image/png)
2015-02-03 17:20 PST, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (7.81 KB, patch)
2015-02-03 17:25 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-01-29 18:56:55 PST
Joseph Pecoraro
Comment 2 2015-02-03 17:20:30 PST
Created attachment 245993 [details] [IMAGE] Proposed Changes
Joseph Pecoraro
Comment 3 2015-02-03 17:25:00 PST
Created attachment 245994 [details] [PATCH] Proposed Fix It kinda stinks that we pass this array to the frontend as a RemoteObject. This forces the frontend to peek into the preview to get string values. This could be an optional property on ConsoleMessage, but I felt it might make sense keeping it a "console.table" parameter like a "console.log" parameter. I can go with either approach.
WebKit Commit Bot
Comment 4 2015-02-04 14:27:24 PST
Comment on attachment 245994 [details] [PATCH] Proposed Fix Clearing flags on attachment: 245994 Committed r179635: <http://trac.webkit.org/changeset/179635>
WebKit Commit Bot
Comment 5 2015-02-04 14:27:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.