Web Inspector: console.table with columnName filter for non-existent property should still show column https://bugs.webkit.org/show_bug.cgi?id=141066

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-04
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* inspector/ConsoleMessage.cpp:
(Inspector::ConsoleMessage::addToFrontend):
When a user provides a second argument, e.g. console.table(..., columnNames),
then pass that second argument to the frontend.

* inspector/InjectedScriptSource.js:
Add a FIXME about the old, unused path now.

Source/WebInspectorUI:

* UserInterface/Views/ConsoleMessageImpl.js:
(WebInspector.ConsoleMessageImpl.prototype._appendPropertyPreviews):
(WebInspector.ConsoleMessageImpl.prototype._userProvidedColumnNames):
(WebInspector.ConsoleMessageImpl.prototype._formatParameterAsTable):
If a second argument was provided to console.table, try to extract a list
of string names to use for the object properties. Output a table with
the provided column names, in the specified order. Also, use this
opportunity to mark missing properties with an em dash.

Canonical link: https://commits.webkit.org/159277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179635 268f45cc-cd09-0410-ab3c-d52691b4dbfc